# synapx

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-upload.yaml
bindings/: tensor_bindings.cpp
examples/: basic_mlp.ipynb  mnist_mlp.ipynb
examples/utils/: __init__.py  data.py  train.py
legacy/: conv_tools.c  conv_tools.py
libsynapx/: CMakeLists.txt  CMakePresets.json  Makefile  vcpkg.json
libsynapx/bindings/: CMakeLists.txt  config.hpp  parsers.hpp  python_bindings.cpp  synapx_bindings.cpp  types.hpp
libsynapx/cmake/: SynapxConfig.cmake.in
libsynapx/examples/: CMakeLists.txt  example_add.cpp  example_matmul.cpp  example_torch_matmul.cpp
libsynapx/include/synapx/: device.hpp  functional.hpp  synapx.hpp  tensor.hpp
libsynapx/include/synapx/autograd/: engine.hpp  functions.hpp  graph.hpp  utils.hpp
libsynapx/include/synapx/autograd/cpu/: ops.hpp  utils.hpp
libsynapx/src/: autograd.cpp  cpu_ops.cpp  cpu_ops.hpp  device.cpp  functional.cpp  tensor.cpp
libsynapx/src/autograd/: engine.cpp  functions.cpp  utils.cpp
libsynapx/src/autograd/cpu/: ops.cpp  utils.cpp
libsynapx/tests/: CMakeLists.txt  matmul_test.cpp  tensor_test.cpp  test_backward.cpp
scripts/: benchmarks.py  build_libsynapx.py  build_synapx_wheels.py  build_wheel.py  generate_pyi.py  setup_synapx.py  setup_synapx_win.py
src/: cpu_ops.hpp  functional.hpp  tensor.cpp  tensor.hpp
synapx/: CMakeLists.txt  Makefile  _C.pyi  __init__.py  cpptensor.pyi  synapx_c.pyi  tensor_bindings.cpp
synapx/_C/: Makefile  cpu_ops.hpp  dtype.cpp  dtype.hpp  functional.hpp  tensor.cpp  tensor.hpp  utils.cpp  utils.hpp  z_main.cpp
synapx/nn/: __init__.py  activations.py  layers.py  modules.py
tests/: conftest.py  test_activations.py  test_engine.py  test_initializers.py  test_layers.py  test_losses.py  test_ops.py  test_optimizers.py  test_training.py  utils.py
