[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapx"
dynamic = ["version"]
description = "A deep learning library with an autograd engine and core operations implemented in C++, featuring a Torch-like API."
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = {text = "MIT"}
urls = {Homepage = "https://github.com/pgmesa/synapx"}
keywords = ["Autograd", "Tensor", "Machine Learning", "Deep Learning", "C++", "Python"]
authors = [
    {name = "Pablo García Mesa", email = "pgmesa.sm@gmail.com"}
]

dependencies = [
    "torch>=2.0.0,<3.0.0",
]

classifiers = [
    "Development Status :: 1 - Planning",

    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",

    "License :: OSI Approved :: MIT License",

    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",

    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["synapx", "synapx.*"]} }
package-data = {"synapx.lib" = ["**/*"]}

[tool.setuptools.dynamic]
version = {attr = "synapx.__version__"}

[tool.test]
framework = "pytest"