[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapx"
dynamic = ["version"]
description = "A deep learning library powered by a C++ autograd engine, featuring a PyTorch-like API and cross-platform support."
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = "MIT"
urls = {Homepage = "https://github.com/pgmesa/synapx"}
keywords = ["Autograd", "Tensor", "Machine Learning", "Deep Learning", "C++", "Python"]
authors = [
    {name = "Pablo García Mesa", email = "pgmesa.sm@gmail.com"}
]

dependencies = [
    "torch>=2.4.0,<=2.7.0; python_version == '3.9'",
    "torch>=2.4.0,<=2.7.0; python_version == '3.10'",
    "torch>=2.4.0,<=2.7.0; python_version == '3.11'",
    "torch>=2.4.0,<=2.7.0; python_version == '3.12'",
]

classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",

    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",

    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
build = [    
    "pybind11>=2.6.0,<3.0.0",
    "pybind11-stubgen>=2.0.0,<3.0.0"
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["synapx", "synapx.*"]} }
package-data = { "synapx.lib" = ["**/*"], "synapx" = ["include/**/*", "share/**/*"] }

[tool.setuptools.dynamic]
version = {attr = "synapx.__version__"}

[tool.test]
framework = "pytest"